# DataExchangeAPI

./: .dockerignore  .gitignore  CMakeLists.txt  Caddyfile  Dockerfile  README.md  README_new.md  Server_setup.md  compose.yaml  cyberwater.py  cyberwater_high_level.py  cyberwater_http_interface.py  cyberwater_library.py  cyberwater_test.py  e3sm_test  e3sm_test.f90  exchange_server.py  jet_stream_statistical_results.txt  makefile  pyproject.toml  python-server.py  python_server.py  raw_results.txt  requirements.txt  statistical_results.txt
benchmark/: cyberwater_bench.py  plot.py  plot_sendrecv.py
data_exchange/: session_send_recv.f90
data_exchange_lib/: data_exchange.f90  fortran_interface.f90  http_impl.c  http_interface.f90  makefile
doc/: README_new.md
e3sm/: c-client-wrapper.c  e3sm  e3sm.f90  fortran_client.f90  http_client_interface.mod  makefile  session_send_recv.f90  session_send_recv.mod
results/bigred/: nd_raw_results.txt  nd_statistical_results.txt  raw_results.txt  statistical_results.txt
results/jetstream/: raw_results.txt  statistical_results.txt
results/jetstream/docker/: raw_results.txt  statistical_results.txt
results/local/: raw_results.txt  statistical_results.txt
results/original/: laptop_raw_results_original.txt
src/: CMakeLists.txt  cw_cpl_indices.F90  cw_cpl_indices.py  data_classes.py
src/clients/cyberwater/: high_level_api.py  low_level_api.py
src/clients/cyberwater/lib/: high_level_api.py  low_level_api.py  ssl-cert-snakeoil.pem
src/clients/e3sm/: high_level_api.f90  low_level_c_api.c  low_level_fortran_interface.f90
src/clients/e3sm/lib/: high_level_api.f90  low_level_c_api.c  low_level_fortran_api.f90  low_level_fortran_interface.f90
src/server/: exchange_server.py
tests/: CMakeLists.txt  tests.py
tests/cyberwater/: cyberwater_test2.py  cyberwater_test3.py
tests/e3sm/: e3sm_test1.f90  e3sm_test2.f90  e3sm_test3.f90
tests/ex0/cyberwater/: cyberwater_test.py
tests/ex0/e3sm/: e3sm_test  e3sm_test.f90
tests/ex1/cyberwater/: cyberwater_test.py
tests/ex1/e3sm/: e3sm_test  e3sm_test.f90  makefile
tests/ex2/cyberwater/: cyberwater_test.py
tests/ex2/e3sm/: e3sm_test.f90  makefile
tests/single_iteration/cyberwater/: cyberwater_test.py
tests/single_iteration/e3sm/: makefile
tests/single_iteration/e3sm/src/: e3sm_test.f90
